fixed spacing on rotator

--- a/sites/all/themes/civiccommons/css/global.css
+++ b/sites/all/themes/civiccommons/css/global.css
@@ -1667,6 +1667,9 @@ article.node-interaction {
   margin: 10px 0 30px;
 }
 
+.engagement-commons .engagement-commons-slide-row {
+  margin-top: 0px;
+}
 
 #views_slideshow_cycle_teaser_section_engagement_commons_page-page {
   width: 940px;
